Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-84451

VS2017 error 'std::isspace' not found

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.15.0
    • WebEngine
    • None
    • Windows
    • e7480805907c42f1954a9ec9f219de0d5615ac1f (qt/qtwebengine-chromium/80-based)

    Description

      On MSVC when building with current latest VS2017 x64, I get the following error:

      FAILED: obj/third_party/perfetto/src/trace_processor/storage/systrace_trace_parser.obj 
       ninja -t msvc -e environment.x64 -- "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\bin\HostX64\x64/cl.exe" /nologo /showIncludes -DUSE_AURA=1 -DTOOLKIT_QT -D_HAS_EXCEPTIONS=0 -D__STD_C -D_CRT_RAND_S -D_CRT_SECURE_NO_DEPRECATE -D_SCL_SECURE_NO_DEPRECATE -D_ATL_NO_OPENGL -D_WINDOWS -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -DPSAPI_VERSION=2 -DWIN32 -D_SECURE_ATL -D_USING_V110_SDK71_ -DWINAPI_FAMILY=WINAPI_FAMILY_DESKTOP_APP -DWIN32_LEAN_AND_MEAN -DNOMINMAX -D_UNICODE -DUNICODE -DNTDDI_VERSION=NTDDI_WIN10_RS2 -D_WIN32_WINNT=0x0A00 -DWINVER=0x0A00 -D_DEBUG -DDYNAMIC_ANNOTATIONS_ENABLED=1 -D_HAS_ITERATOR_DEBUGGING=0 -DPERFETTO_IMPLEMENTATION -Igen -I../../../../src/3rdparty/chromium -I../../../../src/3rdparty/chromium/third_party/perfetto -I../../../../src/3rdparty/chromium/third_party/perfetto/include -Igen/third_party/perfetto/build_config -I../../../../src/3rdparty/chromium/third_party/zlib -I../../../../src/3rdparty/chromium/third_party/protobuf/src -Igen/protoc_out -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -Igen/third_party/perfetto -I../../../../src/3rdparty/chromium/third_party/jsoncpp/source/include -I../../../../src/3rdparty/chromium/third_party/jsoncpp/generated /Gy /FS /bigobj /utf-8 /Zc:sizedDealloc- /wd4117 /D__DATE__= /D__TIME__= /D__TIMESTAMP__= /W4 /wd4091 /wd4127 /wd4251 /wd4275 /wd4312 /wd4324 /wd4351 /wd4355 /wd4503 /wd4589 /wd4611 /wd4100 /wd4121 /wd4244 /wd4505 /wd4510 /wd4512 /wd4610 /wd4838 /wd4995 /wd4996 /wd4456 /wd4457 /wd4458 /wd4459 /wd4200 /wd4201 /wd4204 /wd4221 /wd4245 /wd4267 /wd4305 /wd4389 /wd4702 /wd4701 /wd4703 /wd4661 /wd4706 /wd4715 /Od /Ob0 /GF /Zi /MDd /TP /wd4577 /GR- /c ../../../../src/3rdparty/chromium/third_party/perfetto/src/trace_processor/importers/systrace/systrace_trace_parser.cc /Foobj/third_party/perfetto/src/trace_processor/storage/systrace_trace_parser.obj /Fd"obj/third_party/perfetto/src/trace_processor/storage_cc.pdb"
       ../../../../src/3rdparty/chromium/third_party/perfetto/src/trace_processor/importers/systrace/systrace_trace_parser.cc(40): error C2672: 'std::isspace': no matching overloaded function found
       ../../../../src/3rdparty/chromium/third_party/perfetto/src/trace_processor/importers/systrace/systrace_trace_parser.cc(40): error C2780: 'bool std::isspace(_Elem,const std::locale &)': expects 2 arguments - 1 provided
       C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include\locale(253): note: see declaration of 'std::isspace'
       ../../../../src/3rdparty/chromium/third_party/perfetto/src/trace_processor/importers/systrace/systrace_trace_parser.cc(42): error C2672: 'std::isspace': no matching overloaded function found
       ../../../../src/3rdparty/chromium/third_party/perfetto/src/trace_processor/importers/systrace/systrace_trace_parser.cc(42): error C2780: 'bool std::isspace(_Elem,const std::locale &)': expects 2 arguments - 1 provided
       C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include\locale(253): note: see declaration of 'std::isspace'
      

      I built Qt 5.15.0 first, then configure QtWebEngine with:

          "-no-webengine-alsa"
          "-no-webengine-ffmpeg"
          "-no-webengine-opus"
          "-no-webengine-webp"
          "-no-webengine-printing-and-pdf"
          "-no-webengine-proprietary-codecs"
          "-no-webengine-pulseaudio"
          "-no-webengine-webrtc"
          "-no-webengine-geolocation"
          "-no-webengine-extensions"
          "-no-webengine-kerberos"
          "-webengine-webchannel"
          "-no-webengine-pepper-plugins"
          "-no-webengine-spellchecker"
          "-no-webengine-native-spellchecker"
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              qt_webengine_team Qt WebEngine Team
              emmenlau Mario Emmenlauer
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes