Fix VS2017 builds

Include cctype for single argument std::isspace.

Change-Id: Ieb12f80cf58d657d423c5ff5e019a62475591fe1
Fixes: QTBUG-84451
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>